--- a/weekly-report/2023_08_31report.md
+++ b/weekly-report/2023_08_31report.md
@@ -13,16 +13,26 @@ I firstly played around with the Rhino file and Grasshopper file to explore the 
    
     <img width="800" alt="original_wood_stand" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/original_wood_stand.png">
    
-2. I was playing around and found that there was limitation to the angle that ths user could adjust to. The maximum angle is 96. The below two images shown:
-   - When the angle is 97, the Grasshopper file reported error with red preview in Rhino.
+   ---
+2.   I was playing around and found that there was limitation to the angle that ths user could adjust to. The maximum angle is `96` and the minimum angle is `42`.
+   
+   - When the angle is `97`, the Grasshopper file reported error with red preview in Rhino. No preview is shown in the "DrawingsView".
      
      <img width="800" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_97.png">
 
-   - The below image shows the Rhino preview when the maximum angle of 96 is reached.
+   - The below image shows the Rhino preview when the `maximum` angle of `96` is reached.
 
      <img width="800" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_96.png">
 
+   - When the angle is `41`, the Grasshopper file reported error with red preview in Rhino. No preview is shown in the "DrawingsView".
 
+      <img width="800" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_41.png">
+
+   - The below image shows the Rhino preview when the `minimum` angle of `42` is reached.
+
+      <img width="800" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_42.png">
+
+---
 1. one
 2. two
 3. three
