--- a/weekly-reports/2023_08_31report.md
+++ b/weekly-reports/2023_08_31report.md
@@ -1,10 +1,12 @@
 ---
 # Report 1 - Week of 08/31/2023 #
 
-In this week report, I have worked on two things
+In this week report, I have worked on three things:
 
 1. Test out the Rhino and Grasshopper file
-2. Test out laser cut
+2. Set up laser cut file in Adobe Illustrator
+3. Test out laser cut
+---
 
 ### 💡 Rhino & Grasshopper file ###
 I firstly played around with the Rhino file and Grasshopper file to explore the possibility of the given design.
@@ -14,7 +16,7 @@ I firstly played around with the Rhino file and Grasshopper file to explore the 
     <img width="800" alt="original_wood_stand" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/original_wood_stand.png">
    
    ---
-2.   I was playing around and found that there was limitation to the angle that ths user could adjust to. The maximum angle is `96` and the minimum angle is `42`.
+2.   Then, I set the iphone dimension to Iphone 14 Pro Max, whose dimension is 77.6 mm × 160.7 mm × 7.9 mm. When I was played around with the GH file, I found that there was limitation to the angle that ths user could adjust to. The maximum angle is `96` and the minimum angle is `42`.
    
    - When the angle is `97`, the Grasshopper file reported error with red preview in Rhino. No preview is shown in the "DrawingsView".
      
@@ -32,6 +34,20 @@ I firstly played around with the Rhino file and Grasshopper file to explore the 
 
       <img width="800" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_42.png">
 
+3.  After exploring the constraint of the GH file, I stayed at the "PhoneCameraView" window to find out the most desired shooting angle for me, set the angle to `76`.
+   
+   - The image showing the values of each adjustable parameter.
+
+     <img width="800" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_76.png">
+     
+   - "PhoneCameraView" & "HumanView" for selected angle `76`
+
+     <img width="400" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_76_PhoneCameraView.png"> <img width="400" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_76_HumanView.png">
+
+   - "DrawingView" for selected angle `76`
+   
+     <img width="400" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_76_DrawingsView.png"> 
+     
 ---
 1. one
 2. two
