--- a/weekly-reports/2023_08_31report.md
+++ b/weekly-reports/2023_08_31report.md
@@ -1,11 +1,12 @@
 ---
 # Report 1 - Week of 08/31/2023 #
 
-In this week report, I have worked on three things:
+In this week report, I have worked on three things
 
-1. Test out the Rhino and Grasshopper file
-2. Set up laser cut file in Adobe Illustrator
-3. Test out laser cut
+1. Test out the Rhino and Grasshopper file;
+2. Set up laser cut file in Adobe Illustrator;
+3. Test out laser cut.
+
 ---
 
 ### 💡 Rhino & Grasshopper file ###
