--- a/weekly-reports/2023_08_31report.md
+++ b/weekly-reports/2023_08_31report.md
@@ -48,15 +48,32 @@ I firstly played around with the Rhino file and Grasshopper file to explore the 
 
      <img width="400" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_76_PhoneCameraView.png"> <img width="400" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_76_HumanView.png">
 
-   - "DrawingView" for selected angle `76`
+   - "DrawingView" for selected angle `76`, which is also the part I chose to bake in Grasshopper file.
    
      <img width="400" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/wood_stand_14promax_angle_76_DrawingsView.png"> 
      
 ---
-1. one
-2. two
-3. three
 
-- one
-- two
-- three
+### 💡 Laser cut file in Illustrator ###
+
+After I export the baked linework into Adobe Illustrator, I want to customize it a little bit more and also try out different cutting possibilities in laser cut. Therefore, I put on my name "Nancy Niu" on three of the pieces: the two on the `vertical standing pieces` are for `scoring`, while the two on the `bottom piece` are for `engraving`.
+
+ <img width="700" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/lasercut_file.png"> 
+
+In the Illustrator file:
+-   `Red` is for `cut through`
+-   `Blue` is for `scoring`
+-   `Black hatch` is for `engraving`
+
+---
+
+### 💡 Test out laser cut ###
+
+The last step is to test out the laser cut file. I use the spare plywood piece collected in the MakerSpace, whose dimension is `Plywood - 1/4" x 18" x 30"`. Below are the photos shoot from the cutting process.
+
+- Engraving
+
+   <img width="700" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/weekly-reports/image/lasercut_engrave.png"> 
+   
+- Scoring
+- Cut through
