--- a/weekly-reports/2023_08_31report.md
+++ b/weekly-reports/2023_08_31report.md
@@ -9,7 +9,7 @@ In this week report, I have worked on three things
 
 ---
 
-### 💡 Rhino & Grasshopper file ###
+### 💻 Rhino & Grasshopper file ###
 
 
 I firstly played around with the Rhino file and Grasshopper file to explore the possibility of the given design.
@@ -54,7 +54,7 @@ I firstly played around with the Rhino file and Grasshopper file to explore the 
      
 ---
 
-### 💡 Laser cut file in Illustrator ###
+### 💻 Laser cut file in Illustrator ###
 
 After I export the baked linework into Adobe Illustrator, I want to customize it a little bit more and also try out different cutting possibilities in laser cut. Therefore, I put on my name "Nancy Niu" on three of the pieces: the two on the `vertical standing pieces` are for `scoring`, while the two on the `bottom piece` are for `engraving`.
 
@@ -67,13 +67,30 @@ In the Illustrator file:
 
 ---
 
-### 💡 Test out laser cut ###
+### 👐 Test out laser cut ###
 
 The last step is to test out the laser cut file. I use the spare plywood piece collected in the MakerSpace, whose dimension is `Plywood - 1/4" x 18" x 30"`. Below are the photos shoot from the cutting process.
 
-- Engraving
+- Engrave
 
    <img width="500" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/lasercut_engrave.png"> 
    
-- Scoring
+- Score
+  
+   <img width="500" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/lasercut_score.png"> 
+   
 - Cut through
+
+  <img width="500" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/lasercut_cutthrough.png"> 
+
+---
+
+### 📸 Final Product ###
+
+Here are the documentations for the four pieces and when they are assembled. 
+
+   <img width="400" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/assemble_piece.png"> <img width="400" alt="original " src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/stand.png"> 
+
+---
+
+### 💡 Reflection ###
