--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -1,1 +1,21 @@
-111
+---
+# Report 2 - Week of 09/07/2023 #
+
+In this week report, I am mainly ideating possible designs for my own cellphone stand.
+
+There are
+1. Test out the Rhino and Grasshopper file;
+2. Set up laser cut file in Adobe Illustrator;
+3. Test out laser cut.
+
+---
+
+### 💻 Rhino & Grasshopper file ###
+
+
+I firstly played around with the Rhino file and Grasshopper file to explore the possibility of the given design.
+
+
+1.  This is the original setting of the Grasshopper file for the plywood cellphone stand.
+   
+    <img width="700" alt="original_wood_stand" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/original_wood_stand.png">
