--- a/weekly-reports/2023_08_31report.md
+++ b/weekly-reports/2023_08_31report.md
@@ -1,7 +1,7 @@
 ---
 # Report 1 - Week of 08/31/2023 #
 
-In this week report, I have worked on three things
+In this week's report, I have worked on three things
 
 1. Test out the Rhino and Grasshopper file;
 2. Set up laser cut file in Adobe Illustrator;
