--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -1,21 +1,33 @@
 ---
 # Report 2 - Week of 09/07/2023 #
 
-In this week report, I am mainly ideating possible designs for my own cellphone stand.
+### In this week's report, I am mainly ideating possible designs for my own cell phone stand.
+<br>
 
-There are
-1. Test out the Rhino and Grasshopper file;
-2. Set up laser cut file in Adobe Illustrator;
-3. Test out laser cut.
+I am currently considering two possibilities for the cell phone stand to be able to adjust to different phone size and shooting angles
+<br>
+
+1. The cell phone stand itself is adjustable with ***multiple grooves or notches*** that can be slotted in (like multiple modes or system presets). 
+2. The design itself is ***parametric*** so that it can be adjusted in ***Grasshopper***  according to the input data (like TJ’s Grasshopper file).
 
 ---
 
-### 💻 Rhino & Grasshopper file ###
+
+### :one: Adjustable Design of Cell Phone Stand ###
 
 
-I firstly played around with the Rhino file and Grasshopper file to explore the possibility of the given design.
+The followings are some of my initial ideas and diagrams of how the cell phone stand itself is adjustable, each with their pros and cons.
 
 
-1.  This is the original setting of the Grasshopper file for the plywood cellphone stand.
-   
-    <img width="700" alt="original_wood_stand" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/original_wood_stand.png">
+1.  Wavy Cell Phone Stand
+
+
+    **Pros:**
+    - The deisgn itself is aesthetic
+    - Offers additional functionalities, such as a pen holder
+
+    **Cons:**
+    - Only few angles is available
+    - 
+
+3.  
