--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -19,15 +19,17 @@ I am currently considering two possibilities for the cell phone stand to be able
 The followings are some of my initial ideas and diagrams of how the cell phone stand itself is adjustable, each with their pros and cons.
 
 
-1.  Wavy Cell Phone Stand
+### 1.  Wavy Cell Phone Stand ###
 
 
-    **Pros:**
-    - The deisgn itself is aesthetic
+   **Pros:**
+   
+    - The form is aesthetic
     - Offers additional functionalities, such as a pen holder
 
-    **Cons:**
+   **Cons:**
+   
     - Only few angles is available
-    - 
+    - Unable to charge the phone when it is on the stand
 
-3.  
+#### 2.  Mortise and tenon joint structure
