--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -11,9 +11,9 @@ I am currently considering two possibilities for the cell phone stand to be able
 2. The design itself is ***parametric*** so that it can be adjusted in ***Grasshopper***  according to the input data (like TJ’s Grasshopper file).
 
 ---
+<br>
 
-
-### :one: Adjustable Design of Cell Phone Stand ###
+# :one: Adjustable Design of Cell Phone Stand #
 
 
 The followings are some of my initial ideas and diagrams of how the cell phone stand itself is adjustable, each with their pros and cons.
@@ -32,4 +32,4 @@ The followings are some of my initial ideas and diagrams of how the cell phone s
     - Only few angles is available
     - Unable to charge the phone when it is on the stand
 
-#### 2.  Mortise and tenon joint structure
+### 2.  Mortise and tenon joint structure ###
