--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -31,5 +31,17 @@ The followings are some of my initial ideas and diagrams of how the cell phone s
    
     - Only few angles is available
     - Unable to charge the phone when it is on the stand
+    - The use of material is not very efficient
 
 ### 2.  Mortise and tenon joint structure ###
+
+
+   **Pros:**
+   
+    - The form is aesthetic
+    - Offers additional functionalities, such as a pen holder
+
+   **Cons:**
+   
+    - Only few angles is available
+    - Unable to charge the phone when it is on the stand
