--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -21,6 +21,9 @@ The followings are some of my initial ideas and diagrams of how the cell phone s
 
 ### 1.  Wavy Cell Phone Stand ###
 
+<p align="center">
+ <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Wavy.png">
+</p>
 
    **Pros:**
    
@@ -29,19 +32,23 @@ The followings are some of my initial ideas and diagrams of how the cell phone s
 
    **Cons:**
    
-    - Only few angles is available
+    - Only few angles are available
     - Unable to charge the phone when it is on the stand
     - The use of material is not very efficient
 
 ### 2.  Mortise and tenon joint structure ###
 
+<p align="center">
+ <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Pegboard.png">
+</p>
 
    **Pros:**
    
-    - The form is aesthetic
-    - Offers additional functionalities, such as a pen holder
+    - Able to charge the phone when it is on the stand
+    - It is collapsable, which make it easy to bring around
 
    **Cons:**
    
-    - Only few angles is available
+    - Only few angles are available
+    - The form is not that aesthetic
     - Unable to charge the phone when it is on the stand
