--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -11,13 +11,13 @@ I am currently considering two possibilities for the cell phone stand to be able
 2. The design itself is ***parametric*** so that it can be adjusted in ***Grasshopper***  according to the input data (like TJ’s Grasshopper file).
 
 ---
-<br>
 
 # :one: Adjustable Design of Cell Phone Stand #
 
 
 The followings are some of my initial ideas and diagrams of how the cell phone stand itself is adjustable, each with their pros and cons.
 
+<br>
 
 ### 1.  Wavy Cell Phone Stand ###
 
@@ -34,21 +34,67 @@ The followings are some of my initial ideas and diagrams of how the cell phone s
    
     - Only few angles are available
     - Unable to charge the phone when it is on the stand
-    - The use of material is not very efficient
+    - The form is fixed and rigid, which takes up plenty of packing space and it is inconvenient to carry around
 
-### 2.  Mortise and tenon joint structure ###
+### 2.  Pegboard Stand ###
 
 <p align="center">
+ <img width="207" height="290" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/pegboard_ref.jpg">
  <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Pegboard.png">
 </p>
+
+Inspired by the design of pegboard, the concept of a cell phone stand emerges with a flexible grid of holes and attachments. This adaptable structure allows users to customize their phone stands, effortlessly adjusting angles and configurations to meet their specific needs, emphasizing convenience and versatility.
 
    **Pros:**
    
     - Able to charge the phone when it is on the stand
-    - It is collapsable, which make it easy to bring around
+    - It is collapsable, which make it convenient to bring around
 
    **Cons:**
    
     - Only few angles are available
     - The form is not that aesthetic
+
+---
+
+# :two: Potential Parametric Design of Cell Phone Stand #
+
+This section is about the potential parametric design of the cell phone stand. The concept is much like what TJ shows in the Grasshopper file: the form itself is rigid and unadjustable, but the designs can be customized via parametric method with input datas (like the desired shooting height, angle, and phone model, etc). 
+
+<br>
+
+### 1.  "X" Lock ###
+
+<p align="center">
+ <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/_X_ Lock.png">
+</p>
+
+   **Pros:**
+   
+    - The form is aesthetic
+    - Offers additional functionalities, such as a pen holder
+
+   **Cons:**
+   
+    - Only few angles are available
     - Unable to charge the phone when it is on the stand
+    - The form is fixed and rigid, which takes up plenty of packing space and it is inconvenient to carry around
+
+### 2.  Pegboard Stand ###
+
+<p align="center">
+ <img width="207" height="290" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/pegboard_ref.jpg">
+ <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Pegboard.png">
+</p>
+
+Inspired by the design of pegboard, the concept of a cell phone stand emerges with a flexible grid of holes and attachments. This adaptable structure allows users to customize their phone stands, effortlessly adjusting angles and configurations to meet their specific needs, emphasizing convenience and versatility.
+
+   **Pros:**
+   
+    - Able to charge the phone when it is on the stand
+    - It is collapsable, which make it convenient to bring around
+
+   **Cons:**
+   
+    - Only few angles are available
+    - The form is not that aesthetic
