--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -66,19 +66,39 @@ This section is about the potential parametric design of the cell phone stand. T
 ### 1.  "X" Lock ###
 
 <p align="center">
- <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/_X_ Lock.png">
+ <img width="900" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/_X_ Lock.png">
 </p>
 
+The design is inspired by the Chinese traditional mortise and tenon joint, where each piece is flat with speicial design of grooves or notches, so that they can be locked into each other and forms rigid 3D structure. The design intergrates a similar interlocking mechanism could empower users to tailor their stands efficiently, ensuring both stability and versatility.
+
+<br>
+
+There are two possibilites for this model:
+   
+   (a) each piece has multiple notches at different positions. When they are locked into each other, they results in various angles and heights.
+   
    **Pros:**
    
-    - The form is aesthetic
-    - Offers additional functionalities, such as a pen holder
+    - It is more convenient for the user, since one set of stand can provides multiple angels and heights.
 
    **Cons:**
    
-    - Only few angles are available
-    - Unable to charge the phone when it is on the stand
-    - The form is fixed and rigid, which takes up plenty of packing space and it is inconvenient to carry around
+    - Due to the thickness of the material and laser cutter's limitation of only capable of cutting straight angles,
+      the two pieces can only be locked into each other perpendicularly, which either greatly limits the number of 
+      available shooting angles, or makes the sturcture to wiggle in certian notches.
+
+<br>
+    
+   (b) each piece only have one notch. If the angle and height needs to be adjusted, the position of notch needs to be regenerated in Grasshopper.
+   
+   **Pros:**
+   
+    - Accomodate the limitation of laser cutter.
+    - With less variation, the structure is always strong and stable.
+
+   **Cons:**
+   
+    - May be inconvenient for the users, since each set of cell phone stand can only provide one angle and height.
 
 ### 2.  Pegboard Stand ###
 
