--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -89,7 +89,7 @@ There are two possibilites for this model:
 
 <br>
     
-   (b) each piece only have one notch. If the angle and height needs to be adjusted, the position of notch needs to be regenerated in Grasshopper.
+   (b) each piece only has one notch. If the angle and height needs to be adjusted, the position of notch needs to be regenerated in Grasshopper.
    
    **Pros:**
    
@@ -100,13 +100,28 @@ There are two possibilites for this model:
    
     - May be inconvenient for the users, since each set of cell phone stand can only provide one angle and height.
 
-### 2.  Pegboard Stand ###
+### 2.  Mortise and Tenon Joint Cell Phone Stand (⭐ selected to develope further) ###
 
 <p align="center">
- <img width="207" height="290" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/pegboard_ref.jpg">
- <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Pegboard.png">
+ <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Mortise and tenon joint.png">
 </p>
 
+This design is much inspired by TJ's Grasshopper file of the laser cutting version cell phone stand, and it is also a combination with the above mentioned mortise and tenon joint. The main idea of this design is to resolve the problem of material waste in the original design and to incorporate the new form into the existing wire connection logic in TJ's Grasshopper file.
+
+<br>
+
+<p align="center">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/wood_stand_14promax_angle_76.png"><img width="650" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Layour waste.png">
+</p>
+
+As can be seen, despite the cutout area hatched in black, there are plenty of waste material resulted from the inefficient form. A plywood piece with the dimension of 1/4" x 18" x 30" can only produce a maximum of 7 sets of cell phone stands. What is even worse is that the leftover scratches are all of irregular shapes, which make them difficult to be reused in other projects.
+
+
+<p align="center">
+ <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Simplest.png">
+</p>
+
+<h1 align="center"> :arrow_down:  </h1>
 Inspired by the design of pegboard, the concept of a cell phone stand emerges with a flexible grid of holes and attachments. This adaptable structure allows users to customize their phone stands, effortlessly adjusting angles and configurations to meet their specific needs, emphasizing convenience and versatility.
 
    **Pros:**
