--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -100,7 +100,7 @@ There are two possibilites for this model:
    
     - May be inconvenient for the users, since each set of cell phone stand can only provide one angle and height.
 
-### 2.  Mortise and Tenon Joint Cell Phone Stand (⭐ selected to develope further) ###
+## 2.  Mortise and Tenon Joint Cell Phone Stand (⭐ selected to develope further) ##
 
 <p align="center">
  <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Mortise and tenon joint.png">
@@ -118,18 +118,37 @@ As can be seen, despite the cutout area hatched in black, there are plenty of wa
 
 
 <p align="center">
- <img width="800" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Simplest.png">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Simplest.png">
 </p>
 
 <h1 align="center"> :arrow_down:  </h1>
-Inspired by the design of pegboard, the concept of a cell phone stand emerges with a flexible grid of holes and attachments. This adaptable structure allows users to customize their phone stands, effortlessly adjusting angles and configurations to meet their specific needs, emphasizing convenience and versatility.
 
-   **Pros:**
-   
-    - Able to charge the phone when it is on the stand
-    - It is collapsable, which make it convenient to bring around
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Modify-1.png">
+</p>
 
-   **Cons:**
-   
-    - Only few angles are available
-    - The form is not that aesthetic
+1111
+
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Modify-2.png">
+</p>
+
+1111
+
+<h1 align="center"> :arrow_down:  </h1>
+
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Mortise and tenon joint.png">
+</p>
+
+111111
+
+###  :fast_forward: Progressing process of the layout ###
+<p align="center">
+ <img width="1000" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Progressing.png">
+</p>
+
+---
+
+# Reflection & What can be done next week #
+
