--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -1,1 +1,8 @@
+---
+# Report 3 - Week of 09/014/2023 #
 
+### In this week's report, I visualized my design in Rhino and used Grasshopper to make the design adjustable in a parametric way
+<br>
+
+I am currently considering two possibilities for the cell phone stand to be able to adjust to different phone size and shooting angles
+<br>
