--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -6,3 +6,4 @@
 
 I am currently considering two possibilities for the cell phone stand to be able to adjust to different phone size and shooting angles
 <br>
+[![Watch the video](https://i.stack.imgur.com/Vp2cE.png)](https://youtu.be/ZDXz2oJAfVM)
