--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -6,4 +6,5 @@
 
 I am currently considering two possibilities for the cell phone stand to be able to adjust to different phone size and shooting angles
 <br>
-[![Watch the video](https://i.stack.imgur.com/Vp2cE.png)](https://youtu.be/ZDXz2oJAfVM)
+
+[![Watch the video](https://img.youtube.com/vi/ZDXz2oJAfVM/maxresdefault.jpg)](https://youtu.be/ZDXz2oJAfVM)
