--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -4,7 +4,7 @@
 ### In this week's report, I visualized my design in Rhino and used Grasshopper to make the design adjustable in a parametric way
 <br>
 
-I am currently considering two possibilities for the cell phone stand to be able to adjust to different phone size and shooting angles
+### :exclamation: Before we start this week's report, Watch this Youtube video fist!!! It encapsulates the entire design journey of the cell phone stand.
 <br>
 
-[![Watch the video](https://img.youtube.com/vi/ZDXz2oJAfVM/maxresdefault.jpg)](https://youtu.be/ZDXz2oJAfVM)
+[![Watch the video](https://img.youtube.com/vi/ZDXz2oJAfVM/hqdefault.jpg)](https://youtu.be/ZDXz2oJAfVM)
