--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -121,19 +121,21 @@ As can be seen, despite the cutout area hatched in black, there are plenty of wa
  <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Simplest.png">
 </p>
 
+Let's get back to the simplest composition of a cell phone stand. It actually only needs two triangular vertical stands with a little platform anchor at the end to support the phone. However, according to the original design, material waste happens in the middle of the two vertical standing pieces. 
+
 <h1 align="center"> :arrow_down:  </h1>
 
 <p align="center">
  <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Modify-1.png">
 </p>
 
-1111
+By integrating the tip corner into the opposite vertical piece, the waste area in the middle is saved
 
 <p align="center">
  <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Modify-2.png">
 </p>
 
-1111
+Then I realized the structure lacks lateral support, so I carved out two lateral bracing in the middle of each vertical stand. 
 
 <h1 align="center"> :arrow_down:  </h1>
 
@@ -141,7 +143,8 @@ As can be seen, despite the cutout area hatched in black, there are plenty of wa
  <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Mortise and tenon joint.png">
 </p>
 
-111111
+In this way, the cutout piece is of regular shape and the material is efficiently used. The vision is that the middle division line of the design will change accordingly to the user's requirement of different veiwing angles. After the angle of the middle division line is set, a new minimum bounding box will be generted, and the lateral support piece will be added on correspondingly.
+
 
 ###  :fast_forward: Progressing process of the layout ###
 <p align="center">
