--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -129,6 +129,8 @@ Let's get back to the simplest composition of a cell phone stand. It actually on
  <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Modify-1.png">
 </p>
 
+<h1 align="center"> :arrow_down:  </h1>
+
 By integrating the tip corner into the opposite vertical piece, the waste area in the middle is saved
 
 <p align="center">
