--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -1,10 +1,64 @@
 ---
 # Report 3 - Week of 09/014/2023 #
 
-### In this week's report, I visualized my design in Rhino and used Grasshopper to make the design adjustable in a parametric way
+### For this week, I worked on:
+#### 1. Realize my design in Grasshopper and Rhino. 
+#### 2. Laser cut testing of two sets of the design.
+#### 3. Make a video documentation of the entire process.
 <br>
 
 ### :exclamation: Before we start this week's report, Watch this Youtube video fist!!! It encapsulates the entire design journey of the cell phone stand.
 <br>
 
-[![Watch the video](https://img.youtube.com/vi/ZDXz2oJAfVM/hqdefault.jpg)](https://youtu.be/ZDXz2oJAfVM)
+[![Watch the video](https://img.youtube.com/vi/ZDXz2oJAfVM/maxresdefault.jpg)](https://youtu.be/ZDXz2oJAfVM)
+
+<br>
+
+## :one: Objective of the Design
+
+My design is mainly build upon the 2D laser cutting version cell phone stand provided by TJ. After testing out the original file, I realized that the material usage is not very efficient. 
+
+<p align="center">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/wood_stand_14promax_angle_76.png"><img width="650" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Layour waste.png">
+</p>
+
+As can be seen, despite the cutout area hatched in black, there are plenty of waste material resulted from the inefficient form. A plywood piece with the dimension of 1/4" x 18" x 30" can only produce a maximum of 7 sets of cell phone stands. What is even worse is that the leftover scratches are all of irregular shapes, which make them difficult to be reused in other projects.
+
+Therefore, it makes me wonder is it possible to design a more material-efficient way based on TJ’s file?
+And here is the thinking process.
+
+<br>
+
+Let's get back to the simplest composition of a cell phone stand. 
+
+
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Simplest.png">
+</p>
+
+It actually only needs two triangular vertical stands with a little platform anchor at the end to support the phone. However, according to the original design, material waste happens in the middle of the two vertical standing pieces. 
+
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Modify-1.png">
+</p>
+
+By integrating the tip corner into the opposite vertical piece, the waste area in the middle is saved
+
+
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Modify-2.png">
+</p>
+
+Then I realized the structure lacks lateral support, so I carved out two lateral bracing in the middle of each vertical stand. 
+
+
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Mortise and tenon joint.png">
+</p>
+
+In this way, the cutout piece is of regular shape and the material is efficiently used. The vision is that the middle division line of the design will change accordingly to the user's requirement of different veiwing angles. After the angle of the middle division line is set, a new minimum bounding box will be generted, and the lateral support piece will be added on correspondingly.
+
+<br>
+
+## 2️⃣: Wireframe walkthrough in Grasshopper
+
