--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -62,3 +62,11 @@ In this way, the cutout piece is of regular shape and the material is efficientl
 
 ## 2️⃣: Wireframe walkthrough in Grasshopper
 
+:one: : The frist step is to draw out the middle division line and its two tip corners at the two ends of it. The length of the division line is linked to the length of the phone `(phone length / 1.7)`. The two tip corners are always of `90 degrees` to the middle division line and they can also be adjusted according to the thickness of the phone.
+
+<p align="center">
+<img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/ghprocess_1.gif" width="600">
+</p>
+
+2️⃣ : The second step is to rotate the z-zag line component to the desired angle. The angle is adjusted as `Viewing Angle'
+   
