--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -62,11 +62,46 @@ In this way, the cutout piece is of regular shape and the material is efficientl
 
 ## 2️⃣: Wireframe walkthrough in Grasshopper
 
-:one: : The frist step is to draw out the middle division line and its two tip corners at the two ends of it. The length of the division line is linked to the length of the phone `(phone length / 1.7)`. The two tip corners are always of `90 degrees` to the middle division line and they can also be adjusted according to the thickness of the phone.
+#### :one: : The frist step is to draw out the middle division line and its two tip corners at the two ends of it. The length of the division line is linked to the length of the phone `(phone length / 1.7)`. The two tip corners are always of `90 degrees` to the middle division line and they can also be adjusted according to the thickness of the phone. 
 
 <p align="center">
-<img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/ghprocess_1.gif" width="600">
+<img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/ghprocess_1.gif" width="700">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_zigzagline.png">
 </p>
 
-2️⃣ : The second step is to rotate the z-zag line component to the desired angle. The angle is adjusted as `Viewing Angle'
+#### 2️⃣ : The second step is to rotate the zig-zag line component to the desired angle. The angle is adjusted as `Viewing Angle'. And then make the 2D outlint into 3D volumn and rotate and move the two vertical stands into the right position in relationship to the 3D tilted phone model.
+
+<p align="center">
+<img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/ghprocess_2.gif" width="700">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_verticalstandinposition.png">
+</p>
+
+#### 3️⃣ : The third step is to define the minimum bounding box around the zig-zag line.
    
+<p align="center">
+<img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/ghprocess_3.gif" width="700">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_cuttingplane.png">
+</p>
+
+#### 4️⃣ : The fourth step is to create the lateral support cutout shape in 2D and then add the lateral support cutout to the 3D vertical stand since it is easier and more accurate to adjust the lateral support to the correct position in 3D.
+
+<p align="center">
+<img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/ghprocess_4.gif" width="700">
+<img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_lateralsupport.png">
+<p align="center">
+Create lateral support in 2D first to make the right shape
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_slotposition.png">
+ <p align="center">
+Create notches on lateral support in 2D
+<p align="center">
+<img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_verticalstandinpositionwithnotches.png">
+<p align="center">
+Extrude the lateral support into 3D objects and locate them to the 3D vertical stands, then boolean difference.
+</p>
+
+#### 5️⃣ : The final step is to "make 2D" of the new vertical pieces with the lateral support cutout and locate it back inside the bounding box created in step 3. I also adjusted the display color and layout of the 3D stand and phone a little bit in this step.
+
+<p align="center">
+<img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/ghfinalpreview.gif" width="700">
+<img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_final.png">
