--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -14,16 +14,21 @@
 
 <br>
 
-## :one: Objective of the Design
+# :one: Objective of the Design
 
 My design is mainly build upon the 2D laser cutting version cell phone stand provided by TJ. After testing out the original file, I realized that the material usage is not very efficient. 
 
 <p align="center">
- <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/wood_stand_14promax_angle_76.png"><img width="650" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Layour waste.png">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-1/wood_stand_14promax_angle_76.png">
+ <img width="650" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Layour waste.png">
 </p>
 
 As can be seen, despite the cutout area hatched in black, there are plenty of waste material resulted from the inefficient form. A plywood piece with the dimension of 1/4" x 18" x 30" can only produce a maximum of 7 sets of cell phone stands. What is even worse is that the leftover scratches are all of irregular shapes, which make them difficult to be reused in other projects.
 
+<p align="center">
+ <img width="650" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/leftover.png">
+ </p>
+ 
 Therefore, it makes me wonder is it possible to design a more material-efficient way based on TJ’s file?
 And here is the thinking process.
 
@@ -60,7 +65,7 @@ In this way, the cutout piece is of regular shape and the material is efficientl
 
 <br>
 
-## 2️⃣: Wireframe walkthrough in Grasshopper
+# 2️⃣: Wireframe walkthrough in Grasshopper
 
 #### :one: : The frist step is to draw out the middle division line and its two tip corners at the two ends of it. The length of the division line is linked to the length of the phone `(phone length / 1.7)`. The two tip corners are always of `90 degrees` to the middle division line and they can also be adjusted according to the thickness of the phone. 
 
@@ -105,3 +110,20 @@ Extrude the lateral support into 3D objects and locate them to the 3D vertical s
 <p align="center">
 <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/ghfinalpreview.gif" width="700">
 <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_final.png">
+</p>
+
+<br>
+
+# 3️⃣: Laser cut and Assemble
+#### After I finish with the Grasshopper file, I baked two sets of 2D cellphone stand into illustrator file for lasercut: one is of `45 degrees` and the other is of `70 degrees`, and bring them to lasercut. 
+
+<p align="center">
+<img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/lasercut.png">
+ </p>
+ 
+#### As can be seen, being laid out on the same 1/4" x 18" x 30" plywood, the required space of the design is much smaller than the original. The leftover part is also of straight edges and regular shape, which makes it good for reuse in other projects.
+
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/laser cutting.png">
+</p>
+
